# zoomcam

./: .env.example  .flake8  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  Dockerfile  Makefile  README.md  docker-compose.yml  docker-compose2.yml  gen.py  pyproject.toml
config/: auto-config.yaml  git-logging.yaml  history-config.yaml  logging.yaml  monitoring.yaml  user-config.yaml
config/css/: layouts.yaml
config/interpolation/: algorithms.yaml
src/zoomcam/: cli.py  main.py
src/zoomcam/config/: config_manager.py  defaults.py  validator.py
src/zoomcam/core/: auto_config_manager.py  camera_manager.py  git_logger.py  interpolation_engine.py  layout_engine.py  motion_detector.py  recorder.py  stream_processor.py
src/zoomcam/utils/: exceptions.py  helpers.py  logger.py  performance.py
src/zoomcam/web/: api.py
src/zoomcam/web/static/css/: timeline.css
src/zoomcam/web/static/js/: layout-adapter.js  setup-wizard.js  timeline.js
src/zoomcam/web/templates/: admin-monitor.html  admin_monitor.html  setup_wizard.html  timeline.html
tests/: api_test.sh
tests/ansible/: playbook.yml
